<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">NEXT</string>
    <string name="previous_button">PREV</string>
    <string name="default_text"></string>
    <string name="no_cheats_left">Sorry, no more cheating :(</string>
    <string name="already_answered">You have already answered this question!s</string>
    <string name="nope">There are no more questions there :(</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="cheat_question">Are you sure about that?</string>
    <string name="question_oceans">The Pacific Ocean is larger than
the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
freshwater lake.</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Nope!</string>
</resources>